--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+/* Overall Styles */
+
 body{
     margin: 0;
+    padding: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .red-box {
@@ -19,6 +24,7 @@ table {
     outline: none !important;
 }
 
-.css-1oqqzyl-MuiContainer-root {
-    padding: 0 !important;
+div[class*=MuiContainer-root] {
+padding-left: 0 !important;
+padding-right: 0 !important;
 }
