--- a/src/pages/home/styles/home.css
+++ b/src/pages/home/styles/home.css
@@ -1,6 +1,6 @@
 .home-footer {
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     text-align: end;
     padding: 0.25rem;
